fix: center-align navigation bar

--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,6 @@
 .nav-container {
   display: flex;
   flex-direction: row;
-  width: 50%;
   margin-left: auto;
   margin-right: auto;
 }
